Bug 125297 - List Format wrongly applied to text pasted
Summary: List Format wrongly applied to text pasted
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-05-15 07:50 UTC by Kevin Suo
Modified: 2019-05-23 17:28 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
printscreen (11.63 KB, image/png)
2019-05-16 21:18 UTC, raal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kevin Suo 2019-05-15 07:50:10 UTC
Steps to Reproduce:
1. Copy any text, e.g. "Liberation Sans";
2. In Draw, hit F2, click any empty area so that you can type in text;
3. Ctrl+shift+V to paste the text as unformatted text.

Current Result:
• Liberation Sans
(i.e., the text is applied as list style.)

Expected Result:
Liberation Sans
Comment 1 Kevin Suo 2019-05-15 07:52:00 UTC
Bibisect result: (bibisect-linux-64-6.3 repo)
 ded3af90fc4a7e52dbd55e470c99ebdb45e4c10d is the first bad commit
commit ded3af90fc4a7e52dbd55e470c99ebdb45e4c10d
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Sat Apr 27 00:09:44 2019 +0200

    source f4ea84ff370d33a02a8fb1d6405b9d964491258e
    commit f4ea84ff370d33a02a8fb1d6405b9d964491258e
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Apr 25 16:35:14 2019 +0200

    tdf#119650 slow saving spreadsheet with comments, part 1
    
    Reducing the number of times the editeng needs to reformat text takes
    saving from from 278s to 151s

Adding Noel Grandin to CC list. Would you please take a look.

git bisect log
# bad: [7658d1b86471d0ff3eb802ac99ccf7b3528fee0b] source 64faea31f7d05e46fe5c91f87381ec7abae90174
# good: [cbe79d197e743d9c38dd1c13c781212e7834bfab] source a20a2d7e0d28658f2d9089da076961a599833a28
git bisect start 'master' 'oldest'
# good: [20fb89d87555df6fffd460ef70898c001ba74f0c] source e5e1eca721ec35d51c41985e3020909ab956bdc5
git bisect good 20fb89d87555df6fffd460ef70898c001ba74f0c
# good: [64ce88e7e7cf253cda2815e6c47cedb8803d6cc0] source 5355f0d691cdefcebec25a555344d5cd78605c71
git bisect good 64ce88e7e7cf253cda2815e6c47cedb8803d6cc0
# good: [e4a86389cedf390a8608aab41af65ad51717aeeb] source 98272c886b9f7df1670f4ba38d951fc5937a8e89
git bisect good e4a86389cedf390a8608aab41af65ad51717aeeb
# bad: [4c6ef539f2163681ab64ecaff5681c1be9dbecc1] source cddcab00b81a806c29a44181b6b9b9d188d33aea
git bisect bad 4c6ef539f2163681ab64ecaff5681c1be9dbecc1
# good: [973810536fb1a0a4d5be9b463b77532207d36bb8] source 7a3e4f5f5f57c2f8176d0522e469d0b42881962f
git bisect good 973810536fb1a0a4d5be9b463b77532207d36bb8
# good: [59117cec214a232fe6353473d8f3b7db33f69e73] source 4a88cba2eda6b9dac30c31f213c4e082b2d626bb
git bisect good 59117cec214a232fe6353473d8f3b7db33f69e73
# good: [db804a17c12aab65f73831ba094de8899c56b189] source 071c3309260aeae22f464d26bfa56a747f6a02cb
git bisect good db804a17c12aab65f73831ba094de8899c56b189
# bad: [117322fc7a31d8b3e350d03684d9c82544c540d0] source 75d6bc7abdaad42a20899079cd9e8ff5139fedf1
git bisect bad 117322fc7a31d8b3e350d03684d9c82544c540d0
# good: [4ca4c95058f2bd39b26577d90a51bd8bfbde073e] source cc2c0439e4b9dcfb141945d9ea5867053a9eb3be
git bisect good 4ca4c95058f2bd39b26577d90a51bd8bfbde073e
# good: [6161eb0d6a528c73d6a9758ea32b59093c193f70] source 43f8ea2195015b2b204f61798daf8b41bd7809b5
git bisect good 6161eb0d6a528c73d6a9758ea32b59093c193f70
# good: [84c24bfd9db80cb6749bbc49d3a600757cb59a30] source ae381d9c95c1097922051a6abb0b2e573e3522b3
git bisect good 84c24bfd9db80cb6749bbc49d3a600757cb59a30
# bad: [41d4f03e4e520ca9ccba57afc46bce767206499e] source b4a1b89cc84086dfd6f471d7f23fecf0ec8f3331
git bisect bad 41d4f03e4e520ca9ccba57afc46bce767206499e
# bad: [ded3af90fc4a7e52dbd55e470c99ebdb45e4c10d] source f4ea84ff370d33a02a8fb1d6405b9d964491258e
git bisect bad ded3af90fc4a7e52dbd55e470c99ebdb45e4c10d
Comment 2 Xisco Faulí 2019-05-15 08:25:00 UTC
I can't reproduce it in

Version: 6.3.0.0.alpha1+
Build ID: 5053584e71d98ae6bfba405145c45815ba7ad898
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Could you please paste the info from Help - about LibreOffice ?

I have set the bug's status to 'NEEDINFO'. Please change it back to
'UNCONFIRMED' once the information has been provided
Comment 3 Kevin Suo 2019-05-15 10:36:15 UTC
(In reply to Xisco Faulí from comment #2)

Version: 6.3.0.0.alpha0+
Build ID: f4ea84ff370d33a02a8fb1d6405b9d964491258e
CPU threads: 4; OS: Linux 4.18; UI render: default; VCL: gtk3; 
Locale: zh-CN (zh_CN.UTF-8); UI-Language: en-US
Calc: threaded

Ubuntu 18.04 LTS X64

I reproduce it with the build from bibisect-linux-64-6.3 repo, and also from my own build from master.
Comment 4 Timur 2019-05-15 14:34:07 UTC
Kevin, please explain where you copy that text from?
Comment 5 Kevin Suo 2019-05-15 15:05:12 UTC
(In reply to Timur from comment #4)
I copied the text from Gedit text editor.
Comment 6 Xisco Faulí 2019-05-16 08:17:14 UTC
(In reply to Kevin Suo from comment #5)
> (In reply to Timur from comment #4)
> I copied the text from Gedit text editor.

I can't reproduce it if I copy&paste from xed nor firefox.
Do you only reproduce it from gedit?
Comment 7 Kevin Suo 2019-05-16 08:46:39 UTC
(In reply to Xisco Faulí from comment #6)
I can reproduce from any application, e.g. Gedit, Firefox, Gnome Terminal, and even LibreOffice Writer.
Comment 8 Timur 2019-05-16 11:14:42 UTC
Could you please create and attach a screencast showing the steps?
There are various free screencast software available for use, including Camstudio (Windows), Jing (Mac), Simple Screen Recorder (Linux) or screencast-o-matic.com (Web).
Comment 9 V Stuart Foote 2019-05-16 12:46:00 UTC
With STR or comment 0, can not reproduce on Windows 10 Hemo 64-bit en-US with
Version: 6.3.0.0.alpha1+
Build ID: 31cc28ca7c02f28b64e9d757c9fc17e2a81ba352
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

The <ctrl><shift>+v paste as unformatted text is placed into Draw TexBox object as text without any additional formatting, list or indentation.

Could this be a locale issue for profile default? What locale are you working in Kevin?
Comment 10 raal 2019-05-16 21:17:34 UTC
Confirm with Version: 6.3.0.0.alpha0+
Build ID: 630db80d17616d635cf2e5f1d5a0852428b794a3
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: cs-CZ (cs_CZ.UTF-8); UI-Language: en-US


text copied from this bug (Firefox)
Comment 11 raal 2019-05-16 21:18:39 UTC
Created attachment 151471 [details]
printscreen
Comment 12 Kevin Suo 2019-05-17 02:31:46 UTC
Actually to reproduce the bug, you don't even need to do copy and paste: typing text also triggers the bug.
Comment 13 Commit Notification 2019-05-23 17:27:54 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/09af9756151ae0c307b314c05deb0c5d9ff1b8cf%5E%21

tdf#125297 List Format wrongly applied to text pasted

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.