tdf#125297 List Format wrongly applied to text pasted

regression from
    commit f4ea84ff370d33a02a8fb1d6405b9d964491258e
    Date:   Thu Apr 25 16:35:14 2019 +0200
    tdf#119650 slow saving spreadsheet with comments, part 1

Change-Id: I91b3c009fb8b6739e98537de227ab563828b9c80